--- a/src/components/PlanetNav/PlanetNav.module.css
+++ b/src/components/PlanetNav/PlanetNav.module.css
@@ -3,20 +3,43 @@
   list-style: none;
   align-items: center;
 
-  gap: 2.4rem;
+  gap: 2.8rem;
 }
 
 .nav ul li {
-  padding: 2rem 0;
+  position: relative;
+  height: 100%;
+  padding: 2.8rem 0;
 }
 
 .nav ul a:link,
 .nav ul a:visited {
-  font-size: 1.6rem;
-  color: #ffffffbf;
+  letter-spacing: 0.2px;
+  font-size: 1.4rem;
+  color: rgba(255, 255, 255, 0.65);
   text-decoration: none;
   text-transform: uppercase;
   font-weight: 500;
+
+  transition: color 0.3s ease;
+}
+
+.nav .beforeElement {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  height: 4px;
+  width: 100%;
+}
+
+.nav ul a:hover .beforeElement {
+  display: block;
+}
+
+.nav ul a:hover {
+  color: #fff;
 }
 
 .nav a:global(.active) {
