--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,19 @@ body {
   font-family: "League Spartan", sans-serif;
   font-weight: 400;
   line-height: 1.6;
+  font-size: 1.4rem;
 
   background-color: var(--Dark);
-  color: var(--Light);
+  color: #ffffffd4;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Antonio", sans-serif;
+}
+
+.container {
+  max-width: 120rem;
 }
