isLoading state added

--- a/src/components/Spinner/Spinner.module.css
+++ b/src/components/Spinner/Spinner.module.css
@@ -1,4 +1,9 @@
 .spinnerContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   height: 100%;
   display: flex;
   align-items: center;
@@ -9,7 +14,7 @@
   width: 6rem;
   height: 6rem;
   border-radius: 50%;
-  background: conic-gradient(#0000 10%, var(--color-light--2));
+  background: conic-gradient(#0000 10%, var(--Venus));
   -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
   animation: rotate 1.5s infinite linear;
 }
